<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_word"
        style="@style/text_view_style"
        android:hint="@string/phase_hint_word"
        android:inputType="textAutoComplete" />


    <EditText
        android:id="@+id/editTextTime2"
        style="@style/text_view_style"
        android:hint="@string/timer_time"
        android:ems="10"
        android:inputType="time" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />
</LinearLayout>