<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSequence">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/pick_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_color_cap" />

        <EditText
            android:id="@+id/edit_word"
            style="@style/text_view_style"
            android:layout_height="wrap_content"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:autofillHints="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_save"
            style="@style/button_style"
            android:text="@string/button_save" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>