<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditItem">

    <EditText
        android:id="@+id/edit_item_name"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phase_hint_word"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        app:layout_constraintBottom_toTopOf="@+id/editTextSeconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextHours"
        android:layout_width="86dp"
        android:layout_height="68dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hours"
        android:inputType="time"
        android:text="@string/zero"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMinutes"
        app:layout_constraintEnd_toStartOf="@+id/editTextMinutes"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMinutes"
        android:layout_width="86dp"
        android:layout_height="68dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mins"
        android:inputType="time"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSeconds"
        android:layout_width="86dp"
        android:layout_height="68dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/secs"
        android:inputType="time"
        android:text="@string/zero"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextMinutes" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mins"
        app:layout_constraintEnd_toEndOf="@+id/editTextMinutes"
        app:layout_constraintStart_toStartOf="@+id/editTextMinutes"
        app:layout_constraintTop_toBottomOf="@+id/editTextMinutes" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        app:layout_constraintEnd_toEndOf="@+id/editTextHours"
        app:layout_constraintStart_toStartOf="@+id/editTextHours"
        app:layout_constraintTop_toBottomOf="@+id/editTextHours" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secs"
        app:layout_constraintEnd_toEndOf="@+id/editTextSeconds"
        app:layout_constraintStart_toStartOf="@+id/editTextSeconds"
        app:layout_constraintTop_toBottomOf="@+id/editTextSeconds" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="58dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>